baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__02_parser__nested_quotes.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "NestedQuotes"
    L_BRACE "{"
    FIELD
      WORD "single_in_double"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "He said 'hello'"
            QUOTE """
            WORD "He"
            WORD "said"
            ERROR_TOKEN "'"
            WORD "hello"
            ERROR_TOKEN "'"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "double_in_single"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS "("
          L_PAREN "("
    ERROR_TOKEN "'"
    FIELD
      WORD "She"
      TYPE_EXPR "said"
        WORD "said"
    QUOTE """
    FIELD
      WORD "hello"
      TYPE_EXPR
        STRING_LITERAL "')
  escaped_in_escaped string @alias("
          QUOTE """
          ERROR_TOKEN "'"
          R_PAREN ")"
          WORD "escaped_in_escaped"
          WORD "string"
          AT "@"
          WORD "alias"
          L_PAREN "("
          QUOTE """
    FIELD "The"
      WORD "The"
    BACKSLASH "\"
    QUOTE """
    FIELD "quote"
      WORD "quote"
    BACKSLASH "\"
    QUOTE """
    FIELD
      WORD "is"
      TYPE_EXPR "here"
        WORD "here"
    QUOTE """
    R_PAREN ")"
    FIELD
      WORD "complex_nesting"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "description"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "It's \"really\" 'complex'"
            QUOTE """
            WORD "It"
            ERROR_TOKEN "'"
            WORD "s"
            BACKSLASH "\"
            QUOTE """
            WORD "really"
            BACKSLASH "\"
            QUOTE """
            ERROR_TOKEN "'"
            WORD "complex"
            ERROR_TOKEN "'"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "json_like"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "{\"key\": \"value\"}"
            QUOTE """
            L_BRACE "{"
            BACKSLASH "\"
            QUOTE """
            WORD "key"
            BACKSLASH "\"
            QUOTE """
            COLON ":"
            BACKSLASH "\"
            QUOTE """
            WORD "value"
            BACKSLASH "\"
            QUOTE """
            R_BRACE "}"
            QUOTE """
          R_PAREN ")"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "FormatMessage"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "client GPT4"
        KW_CLIENT "client"
        WORD "GPT4"
      PROMPT_FIELD
        WORD "prompt"
        RAW_STRING_LITERAL
          HASH "#"
          QUOTE """
          PROMPT_TEXT "Generate a message for ""
            WORD "Generate"
            WORD "a"
            WORD "message"
            KW_FOR "for"
            QUOTE """
          TEMPLATE_INTERPOLATION "{{ name }}"
            L_BRACE "{"
            L_BRACE "{"
            WORD "name"
            R_BRACE "}"
            R_BRACE "}"
          PROMPT_TEXT "
    Include quotes like: "Welcome, '
            QUOTE """
            WORD "Include"
            WORD "quotes"
            WORD "like"
            COLON ":"
            QUOTE """
            WORD "Welcome"
            COMMA ","
            ERROR_TOKEN "'"
          TEMPLATE_INTERPOLATION "{{ name }}"
            L_BRACE "{"
            L_BRACE "{"
            WORD "name"
            R_BRACE "}"
            R_BRACE "}"
          PROMPT_TEXT "'!""
            ERROR_TOKEN "'"
            NOT "!"
            QUOTE """
          QUOTE """
          HASH "#"
      R_BRACE "}"

=== ERRORS ===
Error: Expected attribute argument, found error
   ╭─[ nested_quotes.baml:4:34 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                  ┬  
   │                                  ╰── Expected attribute argument, found error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected ')', found error
   ╭─[ nested_quotes.baml:4:34 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                  ┬  
   │                                  ╰── Expected ')', found error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found error
   ╭─[ nested_quotes.baml:4:34 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                  ┬  
   │                                  ╰── Expected Unexpected token in class body, found error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found '"'
   ╭─[ nested_quotes.baml:4:44 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                            ┬  
   │                                            ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

Error: field 'The' is missing a type annotation
   ╭─[ nested_quotes.baml:5:37 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                     ─┬─  
   │                                      ╰─── field 'The' is missing a type annotation
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found '\'
   ╭─[ nested_quotes.baml:5:41 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                         ┬  
   │                                         ╰── Expected Unexpected token in class body, found '\'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found '"'
   ╭─[ nested_quotes.baml:5:42 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                          ┬  
   │                                          ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

Error: field 'quote' is missing a type annotation
   ╭─[ nested_quotes.baml:5:43 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                           ──┬──  
   │                                             ╰──── field 'quote' is missing a type annotation
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found '\'
   ╭─[ nested_quotes.baml:5:48 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                ┬  
   │                                                ╰── Expected Unexpected token in class body, found '\'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found '"'
   ╭─[ nested_quotes.baml:5:49 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                 ┬  
   │                                                 ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found '"'
   ╭─[ nested_quotes.baml:5:58 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                          ┬  
   │                                                          ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found ')'
   ╭─[ nested_quotes.baml:5:59 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                           ┬  
   │                                                           ╰── Expected Unexpected token in class body, found ')'
   │ 
   │ Note: Error code: E0010
───╯
